--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>Document</title>
 </head>
 <body>
+    <header></header>
+
     <!-- stairsとは -->
     <section>
-        <h2>stairsとは</h2>
-        <p>stairsは九州工業大学情報工学部の学生プロジェクトです。ICT技術について九州工業大学の学生に向けて教えたり、開発したりする団体です。</p>
+        <h2 class="c-headline">stairsとは</h2>
+        <p class="p-aboutus__description">stairsは九州工業大学情報工学部の学生プロジェクトです。ICT技術について九州工業大学の学生に向けて教えたり、開発したりする団体です。</p>
     </section>
 
     <!-- 活動内容 activity -->
     <section>
-        <h2>活動内容</h2>
-        <p>主な活動は以下のものになります。活動内容は毎年その年に合わせて変動するので随時ご確認ください。</p>
-        <ul>
+        <h2 class="c-headline">活動内容</h2>
+        <p class="p-activity__description">主な活動は以下のものになります。活動内容は毎年その年に合わせて変動するので随時ご確認ください。</p>
+        <ul class="p-activity__list">
             <li>勉強会</li>
             <li>ハッカソン、コンテストへの参加</li>
             <li>スポーツ大会</li>
@@ -27,22 +29,22 @@
 
     <!-- 勉強会 -->
     <section>
-        <h2>勉強会</h2>
-        <p>勉強会は以下の３つの段階で構成されています。</p>
-        <h3>初級編</h3>
+        <h2 class="c-headline">勉強会</h2>
+        <p class="p-study__description">勉強会は以下の３つの段階で構成されています。</p>
+        <h3 class="c-subtitle">初級編</h3>
         <ol>
             <li>内容： webフロント、iOS、デザイン</li>
             <li>期間： 5月ゴールデンウィーク明けの１週間</li>
             <li>時間： それぞれ　１時間半(18:00 ~ 19:30) x ３回</li>
             <li>場所： 九工大講義棟の講義室</li>
         </ol>
-        <h3>中級編</h3>
+        <h3 class="c-subtitle">中級編</h3>
         <ol>
             <li>内容： web、iOSそれぞれで二、三人のチームを作り、gitを利用したチーム開発</li>
             <li>期間： 6月 ~ 7月上旬までの一ヶ月</li>
             <li>場所： 中間発表と最終発表のみ九工大の講義室</li>
         </ol>
-        <h3>上級編</h3>
+        <h3 class="c-subtitle">上級編</h3>
         <p>
             内容： web、iOSで個人、またはチームを作り、リリースや公開を前提にしたプロダクト開発<br>
             また、現役で活躍しているエンジニアに直接教わる機会を設ける予定です。 <br>
@@ -50,21 +52,25 @@
             場所： 未定<br>
         </p>
     </section>
+    
     <!-- イベントへの参加 -->
     <section>
-        <h2>イベントへの参加</h2>
-        <h3>過去の実績</h3>
+        <h2 class="c-headline">イベントへの参加</h2>
+        <h3 class="c-subtitle">過去の実績</h3>
         <h4>2017</h4>
         <ol>
             <li>e-zuka アプリコンテスト</li>
             <li>九州チャレンジキャラバン</li>
         </ol>
     </section>
+
     <!-- Join Us -->
     <section>
-        <h2>stairsへの参加</h2>
+        <h2 class="c-headline">stairsへの参加</h2>
         <p>stairsへの参加は九州工業大学の学生なら誰でも可能です。<br>我々はDiversity(多様性)、Personality(個性)、Ambition(野心)をもつ仲間を一年中募集しております！！
         <br>連絡方法：下のLINE@のQRコードを読み込んで、新規加入希望であることを伝えてください。 </p>
     </section>
+    
+    <footer></footer>
 </body>
 </html>
