--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
 
     <!-- stairsとは -->
     <section>
-        <h2 class="c-headline">stairsとは</h2>
+        <p class="c-headline">stairsとは</p>
         <p class="p-aboutus__description">stairsは九州工業大学情報工学部の学生プロジェクトです。ICT技術について九州工業大学の学生に向けて教えたり、開発したりする団体です。</p>
     </section>
 
@@ -67,7 +68,7 @@
     <!-- Join Us -->
     <section>
         <h2 class="c-headline">stairsへの参加</h2>
-        <p>stairsへの参加は九州工業大学の学生なら誰でも可能です。<br>我々はDiversity(多様性)、Personality(個性)、Ambition(野心)をもつ仲間を一年中募集しております！！
+        <p>stairsへの参加は九州工業大学の学生なら誰でも可能です。
         <br>連絡方法：下のLINE@のQRコードを読み込んで、新規加入希望であることを伝えてください。 </p>
     </section>
     
