--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header></header>
 
     <!-- stairsとは -->
-    <section>
+    <section class="p-aboutus u-mt80 u-mb80">
         <p class="c-headline">stairsとは</p>
-        <p class="p-aboutus__description">stairsは九州工業大学情報工学部の学生プロジェクトです。ICT技術について九州工業大学の学生に向けて教えたり、開発したりする団体です。</p>
+        <p class="p-aboutus__description">stairsは九州工業大学情報工学部の学生プロジェクトです。ICT技術について同大学の学生に向けて教えたり、開発したりする団体です。</p>
     </section>
 
     <!-- 活動内容 activity -->
-    <section>
+    <section class="p-activity u-mt80 u-mb80">
         <h2 class="c-headline">活動内容</h2>
         <p class="p-activity__description">主な活動は以下のものになります。活動内容は毎年その年に合わせて変動するので随時ご確認ください。</p>
         <ul class="p-activity__list">
@@ -25,37 +25,40 @@
             <li>ハッカソン、コンテストへの参加</li>
             <li>スポーツ大会</li>
         </ul>
-
-    </section>
-
-    <!-- 勉強会 -->
-    <section>
-        <h2 class="c-headline">勉強会</h2>
-        <p class="p-study__description">勉強会は以下の３つの段階で構成されています。</p>
-        <h3 class="c-subtitle">初級編</h3>
-        <ol>
-            <li>内容： webフロント、iOS、デザイン</li>
-            <li>期間： 5月ゴールデンウィーク明けの１週間</li>
-            <li>時間： それぞれ　１時間半(18:00 ~ 19:30) x ３回</li>
-            <li>場所： 九工大講義棟の講義室</li>
-        </ol>
-        <h3 class="c-subtitle">中級編</h3>
-        <ol>
-            <li>内容： web、iOSそれぞれで二、三人のチームを作り、gitを利用したチーム開発</li>
-            <li>期間： 6月 ~ 7月上旬までの一ヶ月</li>
-            <li>場所： 中間発表と最終発表のみ九工大の講義室</li>
-        </ol>
-        <h3 class="c-subtitle">上級編</h3>
-        <p>
-            内容： web、iOSで個人、またはチームを作り、リリースや公開を前提にしたプロダクト開発<br>
-            また、現役で活躍しているエンジニアに直接教わる機会を設ける予定です。 <br>
-            期間： 12月 ~ 3月<br>
-            場所： 未定<br>
-        </p>
+        <h3 class="c-subtitle">勉強会</h3>
+        <p class="p-activity__description">勉強会は以下の３つの段階で構成されています。</p>
+        <div class="p-activity-study">
+            <h3 class="p-activity-study__title">初級編</h3>
+            <div class="p-activity-study__items">
+                <ol>
+                    <li>内容： webフロント、iOS、デザイン</li>
+                    <li>期間： 5月ゴールデンウィーク明けの１週間</li>
+                    <li>時間： それぞれ　１時間半(18:00 ~ 19:30) x ３回</li>
+                    <li>場所： 九工大講義棟の講義室</li>
+                </ol>
+            </div>
+            <h3 class="p-activity-study__title">中級編</h3>
+            <div class="p-ativity-study__items">
+                <ol>
+                    <li>内容： web、iOSそれぞれで二、三人のチームを作り、gitを利用したチーム開発</li>
+                    <li>期間： 6月 ~ 7月上旬までの一ヶ月</li>
+                    <li>場所： 中間発表と最終発表のみ九工大の講義室</li>
+                </ol>
+            </div>
+            <h3 class="p-activity-study__title">上級編</h3>
+            <div class="p-activity-study__items">
+                <p>
+                    内容： web、iOSで個人、またはチームを作り、リリースや公開を前提にしたプロダクト開発<br>
+                    また、現役で活躍しているエンジニアに直接教わる機会を設ける予定です。 <br>
+                    期間： 12月 ~ 3月<br>
+                    場所： 未定<br>
+                </p>
+            </div>
+        </div>
     </section>
     
     <!-- イベントへの参加 -->
-    <section>
+    <section class="u-mt80 u-mb80">
         <h2 class="c-headline">イベントへの参加</h2>
         <h3 class="c-subtitle">過去の実績</h3>
         <h4>2017</h4>
@@ -66,7 +69,7 @@
     </section>
 
     <!-- Join Us -->
-    <section>
+    <section class="p-joinus u-mt80 u-mb80">
         <h2 class="c-headline">stairsへの参加</h2>
         <p>stairsへの参加は九州工業大学の学生なら誰でも可能です。
         <br>連絡方法：下のLINE@のQRコードを読み込んで、新規加入希望であることを伝えてください。 </p>
