--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@
     <!-- 活動内容 activity -->
     <section class="p-activity u-mt80 u-mb80">
         <h2 class="c-headline">活動内容</h2>
-        <p class="p-activity__description">主な活動は以下のものになります。活動内容は毎年その年に合わせて変動するので随時ご確認ください。</p>
-        <ul class="p-activity__list">
-            <li>勉強会</li>
-            <li>ハッカソン、コンテストへの参加</li>
-            <li>スポーツ大会</li>
-        </ul>
+        <p class="p-activity__description">主な活動は、勉強会、ハッカソンやコンテストへの参加、スポーツ大会、ピザパーティなどがあります。活動内容は毎年その年に合わせて変動するので随時ご確認ください。</p>
         <h3 class="c-subtitle">勉強会</h3>
         <p class="p-activity__description">勉強会は以下の３つの段階で構成されています。</p>
         <div class="p-activity-study">
@@ -71,7 +66,7 @@
     <!-- Join Us -->
     <section class="p-joinus u-mt80 u-mb80">
         <h2 class="c-headline">stairsへの参加</h2>
-        <p>stairsへの参加は九州工業大学の学生なら誰でも可能です。
+        <p class="p-joinus__description">stairsへの参加は九州工業大学の学生なら誰でも可能です。
         <br>連絡方法：下のLINE@のQRコードを読み込んで、新規加入希望であることを伝えてください。 </p>
     </section>
     
