changed activity finished

--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
     </section>
     
     <!-- イベントへの参加 -->
-    <section class="u-mt80 u-mb80">
+    <section class="p-achievement u-mt80 u-mb80">
         <h2 class="c-headline">イベントへの参加</h2>
         <h3 class="c-subtitle">過去の実績</h3>
-        <h4>2017</h4>
-        <ol>
-            <li>e-zuka アプリコンテスト</li>
-            <li>九州チャレンジキャラバン</li>
-        </ol>
+        <h4 class="p-achievement__year">2017</h4>
+        <div class="p-achievement__items">
+            <ol>
+                <li>e-zuka アプリコンテスト</li>
+                <li>九州チャレンジキャラバン</li>
+            </ol>
+        </div>
     </section>
 
     <!-- Join Us -->
@@ -68,8 +70,14 @@
         <h2 class="c-headline">stairsへの参加</h2>
         <p class="p-joinus__description">stairsへの参加は九州工業大学の学生なら誰でも可能です。
         <br>連絡方法：下のLINE@のQRコードを読み込んで、新規加入希望であることを伝えてください。 </p>
+        <div class="p-joinus__line">
+            <img src="image/line@_contact2018.jpeg" alt="">
+        </div>
     </section>
     
-    <footer></footer>
+    <footer class="l-footer">
+        <img src="image/stairs_square.png" alt="">
+        <a href="mailto:common.stairs@gmail.com" class="l-footer__email">メールはこちらへ</a>
+    </footer>
 </body>
 </html>
