added stairs logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header></header>
+    <div class="p-hero"></div>
 
     <!-- stairsとは -->
     <section class="p-aboutus u-mt80 u-mb80">
