--- a/index.html
+++ b/index.html
@@ -57,12 +57,18 @@
     <section class="p-achievement u-mt80 u-mb80">
         <h2 class="c-headline">イベントへの参加</h2>
         <h3 class="c-subtitle">過去の実績</h3>
-        <h4 class="p-achievement__year">2017</h4>
+        <h3 class="p-achievement__year">2017</h3>
         <div class="p-achievement__items">
-            <ol>
+            <ul>
                 <li>e-zuka アプリコンテスト</li>
+                <ul>
+                    <li>飯塚市長賞を中心に5つの賞を獲得</li>
+                </ul>
                 <li>九州チャレンジキャラバン</li>
-            </ol>
+                <ul>
+                    <li>最優秀賞を獲得(賞金30万!!)</li>
+                </ul>
+            </ul>
         </div>
     </section>
 
