change max-wdith in activity

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- stairsとは -->
     <section class="p-aboutus u-mt80 u-mb80">
         <p class="c-headline">stairsとは</p>
-        <p class="p-aboutus__description">stairsは九州工業大学情報工学部の学生プロジェクトです。ICT技術について同大学の学生に向けて教えたり、開発したりする団体です。</p>
+        <p class="p-aboutus__description">stairsは九州工業大学情報工学部の学生プロジェクトです。<br>ICT技術について同大学の学生に向けて教えたり、開発したりする団体です。</p>
     </section>
 
     <!-- 活動内容 activity -->
@@ -22,7 +22,7 @@
         <h2 class="c-headline">活動内容</h2>
         <p class="p-activity__description">主な活動は、勉強会、ハッカソンやコンテストへの参加、スポーツ大会、ピザパーティなどがあります。活動内容は毎年その年に合わせて変動するので随時ご確認ください。</p>
         <h3 class="c-subtitle">勉強会</h3>
-        <p class="p-activity__description">勉強会は以下の３つの段階で構成されています。</p>
+        <!-- <p class="p-activity__description">勉強会は以下の３つの段階で構成されています。</p> -->
         <div class="p-activity-study">
             <h3 class="p-activity-study__title">初級編</h3>
             <div class="p-activity-study__items">
@@ -55,8 +55,7 @@
     
     <!-- イベントへの参加 -->
     <section class="p-achievement u-mt80 u-mb80">
-        <h2 class="c-headline">イベントへの参加</h2>
-        <h3 class="c-subtitle">過去の実績</h3>
+        <h2 class="c-headline">実績</h2>
         <h3 class="p-achievement__year">2017</h3>
         <div class="p-achievement__items">
             <ul>
