--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>stairs - 九工大(九州工業大学)のIT開発サークル</title>
 </head>
 <body>
-    <header></header>
+    <header class="l-header">
+        <div class="l-header__logo">
+            <img src="image/stairs_logo.png" alt="">
+        </div>
+    </header>
     <div class="p-hero"></div>
 
     <!-- stairsとは -->
