--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
             <img src="image/stairs_logo.png" alt="">
         </div>
     </header>
-    <div class="p-hero"></div>
+    <div class="p-hero">
+        <div class="p-hero-introduction"></div>
+        <p class="p-hero-introduction__title">stairsとは</p>
+        <p class="p-hero-introduction__description">stairsは九州工業大学情報工学部の学生プロジェクトです。<br>ICT技術について同大学の学生に向けて教えたり、開発したりする団体です。</p>
+    </div>
 
     <!-- stairsとは -->
-    <section class="p-aboutus u-mt48 u-mb48">
+    <!-- <section class="p-aboutus u-mt48 u-mb48">
         <p class="c-headline">stairsとは</p>
         <p class="p-aboutus__description">stairsは九州工業大学情報工学部の学生プロジェクトです。<br>ICT技術について同大学の学生に向けて教えたり、開発したりする団体です。</p>
-    </section>
+    </section> -->
 
     <!-- 活動内容 activity -->
-    <section class="p-activity u-mt48 u-mb48">
+    <!-- <section class="p-activity u-mt48 u-mb48"> -->
+    <section class="p-activity u-mb48">
         <h2 class="c-headline">活動内容</h2>
         <p class="p-activity__description">主な活動は、勉強会、ハッカソンやコンテストへの参加、スポーツ大会、ピザパーティなどがあります。活動内容は毎年その年に合わせて変動するので随時ご確認ください。</p>
         <h3 class="c-subtitle">勉強会</h3>
