--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- <section class="p-activity u-mt48 u-mb48"> -->
     <section class="p-activity u-mb48">
         <h2 class="c-headline">活動内容</h2>
-        <p class="p-activity__description">主な活動は、勉強会、ハッカソンやコンテストへの参加、スポーツ大会、ピザパーティなどがあります。活動内容は毎年その年に合わせて変動するので随時ご確認ください。</p>
+        <p class="p-activity__description">主な活動は、勉強会、ハッカソンやコンテストへの参加です。スポーツ大会、合宿(夏と冬)、ピザパーティなどがあります。</p>
         <h3 class="c-subtitle">勉強会</h3>
         <!-- <p class="p-activity__description">勉強会は以下の３つの段階で構成されています。</p> -->
         <div class="p-activity-study">
@@ -65,18 +65,20 @@
     <!-- イベントへの参加 -->
     <section class="p-achievement u-mt48 u-mb48">
         <h2 class="c-headline">実績</h2>
-        <h3 class="p-achievement__year">2017</h3>
-        <div class="p-achievement__items">
-            <ul>
-                <li>e-zuka アプリコンテスト</li>
-                <ul>
-                    <li>飯塚市長賞を中心に5つの賞を獲得</li>
-                </ul>
-                <li>九州チャレンジキャラバン</li>
-                <ul>
-                    <li>最優秀賞を獲得(賞金30万!!)</li>
-                </ul>
-            </ul>
+        <div class="p-achievement-item">
+            <h3 class="p-achievement-item__year">2017</h3>
+            <div class="p-achievement-item__items">
+                    <ul>
+                        <li>e-zuka アプリコンテスト</li>
+                        <ul>
+                            <li>飯塚市長賞を中心に5つの賞を獲得</li>
+                        </ul>
+                        <li>九州チャレンジキャラバン</li>
+                        <ul>
+                            <li>最優秀賞を獲得(賞金30万!!)</li>
+                        </ul>
+                    </ul>
+            </div>
         </div>
     </section>
 
