edit footer and hero

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="p-hero">
         <div class="p-hero-introduction"></div>
         <p class="p-hero-introduction__title">stairsとは</p>
-        <p class="p-hero-introduction__description">stairsは九州工業大学情報工学部の学生プロジェクトです。<br>ICT技術について同大学の学生に向けて教えたり、開発したりする団体です。</p>
+        <p class="p-hero-introduction__description">スマホアプリ、webサイトの開発を九州工業大学の学生に教え、開発をする団体です。</p>
     </div>
 
     <!-- stairsとは -->
