fix tag to h1 for div
最初のstairsのロゴをdivからh1に変更

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header class="l-header">
-        <div class="l-header__logo">
-            <img src="image/stairs_logo.png" alt="">
-        </div>
+        <h1 class="l-header__logo">
+            <img src="image/stairs_logo.png" alt="stairs">
+        </h1>
     </header>
     <div class="p-hero">
         <div class="p-hero-introduction"></div>
@@ -63,7 +63,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- イベントへの参加 -->
     <section class="p-achievement u-mt48 u-mb48">
         <h2 class="c-headline">実績</h2>
@@ -93,7 +93,7 @@
             <img src="image/line@_contact2018.jpeg" alt="">
         </div>
     </section>
-    
+
     <footer class="l-footer">
         <img src="image/stairs_square.png" alt="">
         <a href="mailto:common.stairs@gmail.com" class="l-footer__email">メールはこちらへ</a>
