replace old-line@QR-image with new-line@link-button

--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@
     <section class="p-joinus u-mt48 u-mb48">
         <h2 class="c-headline">stairsへの参加</h2>
         <p class="p-joinus__description">stairsへの参加は九州工業大学の学生なら誰でも可能です。
-        <br>連絡方法：下のLINE@のQRコードを読み込んで、新規加入希望であることを伝えてください。 </p>
+        <br>連絡方法：下のボタンからstairsのLINE@アカウントを友だち追加し、参加フォームに必要事項を記入してください。</p>
         <div class="p-joinus__line">
-            <img src="image/line@_contact2018.jpeg" alt="">
+            <a href="https://line.me/R/ti/p/%40prr3125n">
+                <img height="36" border="0" alt="友だち追加" src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png">
+            </a>
         </div>
     </section>
 
     <footer class="l-footer">
-        <img src="image/stairs_square.png" alt="">
+        <img src="image/stairs_square.png" alt="stairs">
         <a href="mailto:common.stairs@gmail.com" class="l-footer__email">メールはこちらへ</a>
     </footer>
 </body>
