change detail of p-activity-study__items

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="p-activity-study__items">
                 <ol>
                     <li>内容： webフロント、iOS、デザイン</li>
-                    <li>期間： 5月ゴールデンウィーク明けの１週間</li>
+                    <li>期間： 5月ゴールデンウィーク明けの1週間</li>
                     <li>時間： それぞれ　１時間半(18:00 ~ 19:30) x ３回</li>
                     <li>場所： 九工大講義棟の講義室</li>
                 </ol>
@@ -47,19 +47,18 @@
             <h3 class="p-activity-study__title">中級編</h3>
             <div class="p-ativity-study__items">
                 <ol>
-                    <li>内容： web、iOSそれぞれで二、三人のチームを作り、gitを利用したチーム開発</li>
+                    <li>内容： web、iOSそれぞれ個人で、gitを利用したアプリ開発</li>
                     <li>期間： 6月 ~ 7月上旬までの一ヶ月</li>
                     <li>場所： 中間発表と最終発表のみ九工大の講義室</li>
                 </ol>
             </div>
             <h3 class="p-activity-study__title">上級編</h3>
             <div class="p-activity-study__items">
-                <p>
-                    内容： web、iOSで個人、またはチームを作り、リリースや公開を前提にしたプロダクト開発<br>
-                    また、現役で活躍しているエンジニアに直接教わる機会を設ける予定です。 <br>
-                    期間： 12月 ~ 3月<br>
-                    場所： 未定<br>
-                </p>
+                <ol>
+                    <li>内容： web、iOSで個人またはチームで、リリースや公開を前提にしたプロダクト開発</li>
+                    <li>期間： 12月 ~ 3月</li>
+                    <li>場所： 九工大講義棟の講義室</li>
+                </ol>
             </div>
         </div>
     </section>
