--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="p-hero">
         <div class="p-hero-introduction"></div>
         <p class="p-hero-introduction__title">stairsとは</p>
-        <p class="p-hero-introduction__description">スマホアプリ、webサイトの開発を九州工業大学の学生に教え、開発をする団体です。</p>
+        <p class="p-hero-introduction__description">スマホアプリ・webサイトの開発を行う団体で、<br>九州工業大学の学生に開発技術を教えています。</p>
     </div>
 
     <!-- stairsとは -->
