--- a/index.html
+++ b/index.html
@@ -33,32 +33,32 @@
     <!-- <section class="p-activity u-mt48 u-mb48"> -->
     <section class="p-activity u-mb48">
         <h2 class="c-headline">活動内容</h2>
-        <p class="p-activity__description">主な活動は、勉強会、ハッカソンやコンテストへの参加です。スポーツ大会、合宿(夏と冬)、ピザパーティなどがあります。</p>
+        <p class="p-activity__description">勉強会の実施やハッカソン・コンテストへの参加が主な活動内容です。<br>他にもスポーツ大会や合宿(夏・冬)、ピザパーティといったイベントも行っています。</p>
         <h3 class="c-subtitle">勉強会</h3>
         <!-- <p class="p-activity__description">勉強会は以下の３つの段階で構成されています。</p> -->
         <div class="p-activity-study">
             <h3 class="p-activity-study__title">初級編</h3>
             <div class="p-activity-study__items">
                 <ol>
-                    <li>内容： webフロント、iOS、デザイン</li>
+                    <li>内容： Web, iOS, デザイン</li>
                     <li>期間： 5月ゴールデンウィーク明けの1週間</li>
-                    <li>時間： それぞれ　１時間半(18:00 ~ 19:30) x ３回</li>
-                    <li>場所： 九工大講義棟の講義室</li>
+                    <li>時間： 各内容 90分 (18:00 ~ 19:30) x ３回</li>
+                    <li>場所： 九工大 講義室</li>
                 </ol>
             </div>
             <h3 class="p-activity-study__title">中級編</h3>
             <div class="p-ativity-study__items">
                 <ol>
-                    <li>内容： web、iOSそれぞれ個人で、gitを利用したアプリ開発</li>
-                    <li>期間： 6月 ~ 7月上旬までの一ヶ月</li>
-                    <li>場所： 中間発表と最終発表のみ九工大の講義室</li>
+                    <li>内容： gitを利用したWeb・iOSアプリの個人開発</li>
+                    <li>期間： 6月 ~ 7月上旬の約1ヶ月</li>
+                    <li>場所： 九工大 講義室 (中間発表と最終発表のみ)</li>
                 </ol>
             </div>
             <h3 class="p-activity-study__title">上級編</h3>
             <div class="p-activity-study__items">
                 <ol>
-                    <li>内容： web、iOSで個人またはチームで、リリースや公開を前提にしたプロダクト開発</li>
-                    <li>期間： 12月 ~ 3月</li>
+                    <li>内容： 公開を前提にしたWeb・iOSアプリの個人 or チーム開発</li>
+                    <li>期間： 12月 ~ 3月の約4ヶ月</li>
                     <li>場所： 九工大講義棟の講義室</li>
                 </ol>
             </div>
