Adupt flexbox to achivement

--- a/index.html
+++ b/index.html
@@ -74,14 +74,20 @@
                 <ul>
                     <li>
                         <strong>e-zukaスマートフォンアプリコンテスト2017</strong>
+                        <p>『emosi』by ちーむぽぽぽぽん</p>
                         <ul>
-                            <li>「ちーむぽぽぽぽん」の作品『emosi』が飯塚市長賞およびF Ventures賞、ハウインターナショナル賞、福岡ビジネス・デジタル・コンテンツ賞最終審査会参加権を受賞</li>
+                            <li>飯塚市長賞</li>
+                            <li>F Ventures賞</li>
+                            <li>ハウインターナショナル賞</li>
+                            <li>福岡ビジネス・デジタル・コンテンツ賞最終審査会参加権</li>
                         </ul>
                     </li>
                     <li>
                         <strong>九州アプリチャレンジキャラバン2017</strong>
+                        <p>『Grumo』 by いちごヨーグルト</p>
                         <ul>
-                            <li>「いちごヨーグルト」の作品『Grumo』が最優秀賞(賞金30万円)および福岡ビジネス・デジタル・コンテンツ賞最終審査会参加権を受賞</li>
+                            <li>最優秀賞(賞金30万円)</li>
+                            <li>福岡ビジネス・デジタル・コンテンツ賞最終審査会参加権</li>
                         </ul>
                     </li>
                 </ul>
@@ -91,27 +97,42 @@
                 <ul>
                     <li>
                         <strong>JP Hacks2018</strong>
+                        <p>『HyPre』 by Red Bottle Coffee</p>
                         <ul>
-                            <li>「Red Bottle Coffee」の作品『HyPre』がInnovator認定およびアカツキ賞、GA Technologies賞を受賞</li>
+                            <li>Innovator認定</li>
+                            <li>アカツキ賞</li>
+                            <li>GA Technologies賞</li>
                         </ul>
                     </li>
                     <li>
                         <strong>e-zukaスマートフォンアプリコンテスト2018</strong>
+                        <p>『OJT Manager』 by イニシャルがD</p>
                         <ul>
-                            <li>「イニシャルがD」の作品『OJT Manager』がTRIART賞およびF Ventures賞を受賞</li>
-                            <li>「Red Bottle Coffee」の作品『BOKiN』が飯塚市長賞およびオプティム賞、福岡ビジネスデジタルコンテンツ賞2019最終審査会参加権を受賞</li>
+                            <li>TRIART賞</li>
+                            <li>F Ventures賞</li>
+                        </ul>
+                        <p>『BOKiN』 by Red Bottle Coffee</p>
+                        <ul>
+                            <li>飯塚市長賞</li>
+                            <li>オプティム賞</li>
+                            <li>福岡ビジネスデジタルコンテンツ賞2019最終審査会参加権</li>
                         </ul>
                     </li>
                     <li>
                         <strong>九州アプリチャレンジキャラバン2018</strong>
+                        <p>『魁!!漢飯』 by とんとこ公次郎</p>
                         <ul>
-                            <li>「とんとこ公次郎」の作品『魁!!漢飯』が最優秀賞(賞金30万円、2年連続)およびサイバーエージェント賞(賞金5万円)を受賞</li>
+                            <li>最優秀賞(賞金30万円, 団体として2年連続)</li>
+                            <li>サイバーエージェント賞</li>
                         </ul>
                     </li>
                     <li>
                         <strong>福岡ビジネス・デジタル・コンテンツ賞2019</strong>
+                        <p>『魁!!漢飯』 by とんとこ公次郎</p>
                         <ul>
-                            <li>「とんとこ公次郎」の作品『魁!!漢飯』が優秀賞(賞金10万円)およびKBC賞、DLE賞を受賞</li>
+                            <li>優秀賞(賞金10万円)</li>
+                            <li>KBC賞</li>
+                            <li>DLE賞</li>
                         </ul>
                     </li>
                 </ul>
