--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section class="p-achievement u-mt48 u-mb48">
         <h2 class="c-headline">実績</h2>
         <div class="p-achievement-item">
-            <h3 class="p-achievement-item__year">2017</h3>
+            <h3 class="p-achievement-item__year">[ 2017 ]</h3>
             <div class="p-achievement-item__items">
                 <ul>
                     <li>
@@ -92,7 +92,7 @@
                     </li>
                 </ul>
             </div>
-            <h3 class="p-achievement-item__year">2018</h3>
+            <h3 class="p-achievement-item__year">[ 2018 ]</h3>
             <div class="p-achievement-item__items">
                 <ul>
                     <li>
@@ -115,7 +115,7 @@
                         <ul>
                             <li>飯塚市長賞</li>
                             <li>オプティム賞</li>
-                            <li>福岡ビジネスデジタルコンテンツ賞2019最終審査会参加権</li>
+                            <li>福岡ビジネス・デジタル・コンテンツ賞2019最終審査会参加権</li>
                         </ul>
                     </li>
                     <li>
