--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
     <!-- Join Us -->
     <section class="p-joinus u-mt48 u-mb48">
         <h2 class="c-headline">stairsへの参加</h2>
-        <p class="p-joinus__description">stairsへの参加は九州工業大学の学生なら誰でも可能です。
-        <br>連絡方法：下のボタンからstairsのLINE@アカウントを友だち追加し、参加フォームに必要事項を記入してください。</p>
+        <p class="p-joinus__description">九州工業大学の学生であれば、いつでもstairsに参加することができます。<br>参加を希望する方は、下のボタンからstairsのLINE@アカウントを友だち追加した後、<br>参加フォームに必要事項を記入してください。</p>
         <div class="p-joinus__line">
             <a href="https://line.me/R/ti/p/%40prr3125n">
                 <img height="36" border="0" alt="友だち追加" src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png">
