add meta google site verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="UVwiyxHiltmNLc13nla5DHQkfE6brcNHRUPl89rHiEY" />
     <link rel="icon" href="image/favicon.ico">
     <link rel="apple-touch-icon" href="image/touch-icon.png">
     <link rel="stylesheet" href="css/style.css">
